# swLibraries

./: .clang-format  .editorconfig  .gitignore  Doxyfile  GUI.sln  GraphicAPI.sln  Readme.rd  _.editorconfig  run-tests.py  sourcetreeconfig_backup  swLibraries-Versions.xml
swCommonLib/: .gitignore  CMakeLists.txt
swCommonLib/Common/: CMakeLists.txt  Nullable.h  Object.h  TypesDefinitions.h  Version.cpp  Version.h  fmt.h
swCommonLib/Common/Buffers/: BufferRaw.h  BufferTyped.h  Image.h  ImageRegion.h
swCommonLib/Common/Converters/: CanConvert.h  Convert.cpp  Convert.h  ConvertArithmetic.h  ConvertEnums.h  ConvertErrno.cpp  ConvertTraits.h
swCommonLib/Common/Exceptions/: ErrorsCollector.h  Exception.h  Nullable.h  Result.h  ResultImpl.h
swCommonLib/Common/Logging/: ConsoleLogger.h  Logger.cpp  Logger.h
swCommonLib/Common/Macros/: DefineFmtFormatter.h  GenerateOperators.h
swCommonLib/Common/Profile/: PerformanceCheck.cpp  PerformanceCheck.h
swCommonLib/Common/Properties/: Properties.cpp
swCommonLib/HierarchicalChunkedFormat/: CMakeLists.txt  HCF.cpp  HCF.h
swCommonLib/HierarchicalChunkedFormat/Attributes/: AttributeTypes.h
swCommonLib/HierarchicalChunkedFormat/Internal/: ImplHCF.cpp  ImplHCF.h
swCommonLib/ParameterAnimation/: CMakeLists.txt
swCommonLib/ParameterAnimation/Parameters/: DirectPropertyh.h  PropertyPath.h  StringPropertyPath.h
swCommonLib/Projects/Visual2015/: LinkBenchmark.props  LinkReflection.props  Paths.props  TestConfig.props
swCommonLib/Serialization/PropertySerialization/: EngineObject.cpp
swCommonLib/System/: Dir.cpp  Dir.h  File.cpp  File.h  Path.h  Path.h.rej
swCommonLib/TestUtils/: CMakeLists.txt
swCommonLib/TestUtils/CatchUtils/: ExtendedMacros.h
swCommonLib/Tests/: CMakeLists.txt
swCommonLib/Tests/BuffersTest/: TestImage.cpp
swCommonLib/Tests/FileSystemTest/: PathTest.cpp  TestNormalizePath.cpp
swCommonLib/Tests/PropertyAnimationTest/: InterpolatorsTest.cpp
swCommonLib/Tests/TestHelpers/: CMakeLists.txt  TestConverters.cpp  TestDefineFormatter.cpp  TestErrorsCollector.cpp  TestNullable.cpp  TestResult.cpp
swGraphicAPI/: .gitignore  CMakeLists.txt  GraphicAPI.sln
swGraphicAPI/Assets/MaterialAsset/: MaterialAsset.cpp  MaterialAsset.h  MaterialAssetInitData.cpp  MaterialAssetInitData.h  MaterialCreator.cpp  MaterialCreator.h  MaterialInfo.h  PhongMaterialData.h  ShadingModelData.h  ShadingModels.cpp
swGraphicAPI/Assets/MeshAsset/: stdafx.cpp
swGraphicAPI/Assets/TextAsset/: FontAsset.cpp  FontAsset.h  FontAssetCreator.cpp  FontAssetCreator.h  Glyph.h  Text.cpp  Text.h  Text.inl  stdafx.cpp  stdafx.h
swGraphicAPI/DX11API/DX11Initializer/: DX11APIObjects.cpp  DX11APIObjects.h  DX11ConstantsMapper.h  DX11DebugLayer.cpp  DX11Initializer.cpp  DX11Initializer.h  DX11Utils.cpp  DX11Utils.h  DX11Utils.inl
swGraphicAPI/DX11API/DX11Renderer/: DX11Renderer.cpp  DX11Renderer.h
swGraphicAPI/DX11API/DX11Resources/: DX11Buffer.cpp  DX11Buffer.h  DX11Compiler.cpp  DX11Compiler.h  DX11ComputeShader.cpp  DX11ComputeShader.h  DX11InputLayout.cpp  DX11InputLayout.h  DX11InputLayoutDescriptor.cpp  DX11InputLayoutDescriptor.h  DX11PipelineState.cpp  DX11PipelineState.h  DX11PixelShader.cpp  DX11PixelShader.h  DX11RenderTarget.cpp  DX11RenderTarget.h  DX11SwapChain.cpp  DX11SwapChain.h  DX11Texture.cpp  DX11Texture.h  DX11VertexShader.cpp  DX11VertexShader.h  ResourcesFactory.cpp
swGraphicAPI/ImageGenerators/: CheckerboardGenerator.cpp  CheckerboardGenerator.h
swGraphicAPI/Loaders/SoilTextureLoader/: SoilTextureLoader.cpp  SoilTextureLoader.h  stdafx.h
swGraphicAPI/Loaders/swMaterialLoader/: stdafx.h  swMaterialLoader.cpp  swMaterialLoader.h  swMaterialLoader.inl
swGraphicAPI/MockAPI/MockInitializer/: MockInitializer.cpp  MockInitializer.h
swGraphicAPI/MockAPI/MockRenderer/: MockRenderer.cpp  MockRenderer.h
swGraphicAPI/MockAPI/MockResources/: MockBuffer.cpp  MockBuffer.h  MockComputeShader.cpp  MockComputeShader.h  MockInputLayout.cpp  MockInputLayout.h  MockInputLayoutDescriptor.h  MockPipelineState.cpp  MockPipelineState.h  MockPixelShader.cpp  MockPixelShader.h  MockRenderTarget.cpp  MockRenderTarget.h  MockSwapChain.cpp  MockSwapChain.h  MockTexture.cpp  MockTexture.h  MockVertexShader.cpp  MockVertexShader.h  ResourcesFactory.cpp
swGraphicAPI/MockAssets/: GraphicAPI.h  MockAsset.cpp  MockAsset.h  MockAssetCreator.cpp  MockAssetCreator.h  MockAssetLoader.cpp  MockAssetLoader.h  MockCompositeAsset.cpp  MockCompositeAsset.h  MockCompositeAssetCreator.cpp  MockCompositeAssetCreator.h  MockCompositeAssetLoader.cpp  MockCompositeAssetLoader.h  Utils.h  stdafx.cpp  stdafx.h
swGraphicAPI/ProjectsDir/Visual2015/: ImportFreeType.props  LinkReflection.props  Paths.props
swGraphicAPI/Rendering/: GraphicAPIConstants.h  IGraphicAPIInitializer.h  IRenderer.h  RenderCommands.h
swGraphicAPI/ResourceManager/: IAssetLoader.h  ResourceContainer.h  ResourceManager.cpp  ResourceManager.h  ResourceManagerAPI.cpp  ResourceManagerAPI.h  ResourceManagerAsync.cpp  ResourceManagerAsync.h  nResourceContainer.h  nResourceManager.cpp  nResourceManager.h  stdafx.h
swGraphicAPI/ResourceManager/AssetCreators/: AssetsFactory.cpp  AssetsFactory.h  IAssetCreateInfo.h  IAssetCreator.h
swGraphicAPI/ResourceManager/AsyncLoad/: AssetLoadRequest.h  AssetLoadResponse.h  AssetsThread.cpp  AssetsThread.h  LoadBarrier.cpp  LoadBarrier.h  RMAsyncAPI.cpp  RMAsyncAPI.h  RMAsyncLoaderAPI.cpp  RMAsyncLoaderAPI.h  RMAsyncThread.cpp  RMAsyncThread.h
swGraphicAPI/ResourceManager/Cache/: CacheManager.cpp  CacheManager.h  IAssetCache.h  MemoryCache.cpp  MemoryCache.h
swGraphicAPI/ResourceManager/Exceptions/: LoaderException.cpp  LoaderException.h  ResourceManagerException.cpp  ResourceManagerException.h
swGraphicAPI/ResourceManager/Loaders/: IAssetLoadInfo.h  (+10 more)
swGraphicAPI/Resources/: BlendingState.h  BufferInitData.h  DepthStencilState.h  IBuffer.h  IRenderTarget.h  IShader.h  IShaderInputLayout.h  MeshResources.cpp  MeshResources.h  RasterizerState.h  Resource.cpp  ResourceObject.h  ResourcePtr.h  ResourcesFactory.h  SwapChain.h  Texture.h
(+851 files in other folders)
